# MyFractal

./: Fractal manual.docx  README.md  ~$actal manual.docx  ~WRL1625.tmp
Release/: Setup.msi
Source/: CMakeLists.txt
Source/Mandelbrot/: Bulb.shader  Mandelbrot.cpp  fragment.shader  fragment1.shader  vertex.shader  vertex1.shader
Source/Mandelbulb/: Box.shader  BoxDe.shader  Bspudd.shader  Bulb.shader  Bulb2.shader  Bulb2DE.shader  BulbDE.shader  Bulbs.shader  Draw.shader  Filter.shader  Hybrid0.shader  Hybrid1.shader  Mandelbulb.cpp  Reflex0.shader  Reflex1.shader  Spare0.shader  fragment.shader  fragment1.shader  newsave0  newsave1  newsave11  newsave2  newsave3  newsave4  newsave5  newsave6  newsave7  newsave8  start  vertex.shader  vertex1.shader
Source/SolidMandel/: Bulb.geometryshader  Bulb.vertexshader  SolidMandel.cpp  View.fragmentshader  View.vertexshader
Source/Tracer/: Alttracer.computeshader  Draw.computeshader  Filter0.computeshader  Filter1.computeshader  Reflection.computeshader  Shadow.computeshader  Spare0.computeshader  Tracer - Copia.originale  Tracer.computeshader  Tracer.cpp  View.fragmentshader  View.vertexshader  View1.fragmentshader  View1.vertexshader  cube.txt  mesh1  meshes.txt  piramid.txt  save0  save1  save2  save3  save4  save5  save7  save9  sets0  sets1  sets2  sets3  sets4  sets5  start  textures.txt  thorus.dae  thorussk.dae
Source/common/: jellysubs.hpp  keyinput.cpp  keyinput.hpp  shader.cpp  shader.hpp  texture.cpp
Source/commontracer/: jellysubs.cpp  keyinput.cpp  keyinput.hpp  shader.cpp  texture.cpp  texture.hpp
screenshots/: Thumbs.db
